# sudoku_solver

./: LICENSE.md  README.md  Untitled.ipynb  Visualise_Sudoku_Scores.ipynb  pyproject.toml  requirements.txt  sudoku.py  sudoku_data.json  sudoku_kivy.py  sudoku_solver.py  sudoku_solver_test.py  sudoku_test.py  sudoku_tst_scores (conflicted).csv
data/: config.toml  sudoku_data.json
sudoku_solver/: __main__.py  command_line_parser.py  config.py  data.py  plugins.py  sudoku.py  validator.py
sudoku_solver/data/: config.toml
sudoku_solver/solver/: api.py  solver_python_sets.py  sudoku_solver.py
sudoku_solver/ui/: api.py  rich_functions  rich_functions.py  sudoku.kv  sudoku_kivy.py  ui_rich_animated_CLI.py  ui_rich_static_CLI.py  ui_simple_CLI.py  ui_unformatted_CLI.py
sudokusolve/: __main__.py  config.py  data.py  plugins.py  validator.py
sudokusolve/data/: config.toml  sudoku_tst_scores.csv  suduko_layout.csv
sudokusolve/solver/: api.py  solver_python_gen.py  solver_python_sets.py
sudokusolve/ui/: api.py  rich_functions.py  sudoku.kv  ui_kivy.py  ui_kivy_GUI.py  ui_rich_animated_CLI.py  ui_rich_static_CLI.py  ui_simple_CLI.py
tests/: sudoku_solver_t_old  sudoku_solver_test.py  sudoku_test.py  test_solver_python_sets.py  test_sudoku.py  test_validator.py
tests/solver/: test_solve_puzzles.py  test_solver_python_sets.py
tests/sudoku_solver/: test_validator.py
