[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudokusolve"
version = "1.0.0"
description = "Solve Sudoku puzzles"
readme = "README.md"
authors = [{ name = "nibuman"}]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
sudokusolve = "sudokusolve.__main__:main"