[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudokusolve"
version = "1.0.0"
description = "Solve Sudoku puzzles"
readme = "README.md"
authors = [{ name = "nibuman"}]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
sudokusolve = "sudokusolve.__main__:main"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing"

[tool.coverage.run]
source = ["sudokusolve"]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10
target-version = "py310"

[tool.ruff.per-file-ignores]
"sudokusolve/ui/ui_kivy_GUI.py" = ["E402"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.py'

[tool.isort]
profile = "black"
src_paths = ["sudokusolve", "tests"]